# multi-country_fintech

./: .gitignore  CLAUDE.md  Makefile  README.md  REPORTE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gen.sh
backend/: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  conftest.py  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  gen.sh  pyproject.toml
backend/applications/: admin.py  apps.py  cache.py  consumers.py  filters.py  models.py  plan.md  routing.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
backend/applications/migrations/: 0001_initial.py  0002_applicationstatushistory_bankproviderdata_and_more.py  0003_country.py  0004_remove_countryvalidation.py  0005_delete_country.py  0006_alter_creditapplication_country_and_more.py  0007_creditapplication_country_ref.py  0008_remove_creditapplication_country.py  0009_creditapplication_status_fk.py  0010_applicationstatushistory_metadata.py  0011_alter_applicationstatushistory_from_status_and_more.py
backend/applications/tests/: test_applications.py
backend/applications/workflows/: __init__.py  base.py  co.py  mx.py  registry.py
backend/config/: asgi.py  settings.py  urls.py
backend/countries/: admin.py  apps.py  cache.py  models.py  urls.py  views.py
backend/countries/migrations/: 0001_initial.py  0002_countryvalidation.py  (+2 more)
backend/fixtures/: countries.json  statuses.json  users.json
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
frontend/: .dockerignore  (+13 more)
(+67 files in other folders)
