[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=6.0.4",
    "django-celery-results>=2.6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gunicorn>=25.3.0",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
